Set Authorization on Swagger
